--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-debugger":1
+    }
   },
   "browserslist": [
     "> 1%",
